import edu.sc.seis.launch4j.tasks.Launch4jLibraryTask

import java.time.LocalDateTime

plugins {
    id 'application'
    id 'edu.sc.seis.launch4j' version '3.0.6'
    id 'jacoco'
    id 'java'
    id "io.sentry.jvm.gradle" version "4.11.0"
    id 'com.palantir.git-version' version '3.1.0'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
        resources {
            srcDirs = ['resources']
        }
    }
    test {
        java {
            srcDirs = ['unittests']
        }
        resources {
            srcDirs = ['testresources']
        }
    }
}

ext {
    mhqJvmOptions = [
        '-Xmx4096m',
        '--add-opens',
        'java.base/java.util=ALL-UNNAMED',
        '--add-opens',
        'java.base/java.util.concurrent=ALL-UNNAMED',
        '-Dsun.awt.disablegrab=true'
    ]
    campaigns = 'campaigns'
    data = 'data'
    docs = 'docs'
    lib = 'lib'
    log = 'logs'
    mmconf = 'mmconf'
    plugins = 'plugins'
    userdata = 'userdata'
    fileStagingDir = "${buildDir}/files"
    scriptsDir = "${projectDir}/scripts"
    scriptTemplate = "${scriptsDir}/startScriptTemplate.txt"

    // Allows setting a dependency on a different MM branch.
    mmBranch = 'master'
    mmBranchTag = mmBranch.equals('master') ? '' : '-' + mmBranch
    mmlBranch = 'master'
    mmlBranchTag = mmlBranch.equals('master') ? '' : '-' + mmlBranch

    mmDir = "${rootDir}/../megamek"
    mmlDir = "${rootDir}/../megameklab"
}

dependencies {
    implementation "org.megamek:megamek${mmBranchTag}:${version}"
    implementation ("org.megamek:megameklab${mmlBranchTag}:${version}") {
        // We may want to specify different branches for MM and MML, so we need to exclude the transitive MM dependency
        exclude group: 'org.megamek', module: "megamek${mmBranchTag}:${version}"

        // We don't need the python and javascript engine taking up space
        exclude group: 'org.python', module: 'jython'
        exclude group: 'org.mozilla', module: 'rhino'

        // Eclipse IDE Multiple Dependency errors.
        exclude group: 'xml-apis'
    }

    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
    implementation 'javax.vecmath:vecmath:1.5.2'
    implementation 'joda-time:joda-time:2.12.7'
    implementation 'org.apache.commons:commons-csv:1.11.0'
    implementation 'org.apache.commons:commons-math3:3.6.1'
    implementation 'org.apache.commons:commons-text:1.12.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
    implementation 'org.commonmark:commonmark:0.22.0'
    implementation 'org.jfree:jfreechart:1.5.5'
    implementation 'org.joda:joda-money:1.0.4'

    runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:4.0.5'
    // Required for mml printing scaled vector graphics (SVG) - Eclipse IDE Compatability.
    runtimeOnly 'xml-apis:xml-apis-ext:1.3.04'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.3'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.3'
    testImplementation 'org.mockito:mockito-core:5.12.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.12.0'
}

application {
    mainClass = 'mekhq.MekHQ'
}

run {
    jvmArgs = mhqJvmOptions
}

jar {
    archiveFileName = "MekHQ.jar"

    manifest {
        attributes "Main-Class" : application.mainClass
        attributes "Class-Path" : "MegaMek.jar MegaMekLab.jar " + (project.sourceSets.main.runtimeClasspath.files
            .findAll { it.name.endsWith(".jar") && !it.name.toLowerCase().startsWith("megamek") }
            .collect { "${lib}/${it.name}" }.join(' '))
        attributes "Add-Opens" : 'java.base/java.util java.base/java.util.concurrent'
        attributes "Build-Date" : LocalDateTime.now()
    }
}

task generateDynamicFiles() {
    doLast {
        new File("${projectDir}/docs/mhq-revision.txt").text = versionDetails().gitHashFull
        new File("${projectDir}/MekHQ.l4j.ini").text = """# Launch4j runtime config
# you can add arguments here that will be processed by the JVM at runtime
${project.ext.mhqJvmOptions.join('\n')}
"""
    }
}

task stageFiles(type: Copy) {
    description = 'Stages files that are to be copied into the distribution.'

    dependsOn generateDynamicFiles
    dependsOn gradle.includedBuild('megamek').task(':megamek:generateDynamicFiles')
    dependsOn gradle.includedBuild('megameklab').task(':megameklab:generateDynamicFiles')

    from projectDir
    include "${campaigns}/"
    include "${data}/fonts/"
    include "${data}/universe/"
    include "${data}/mapgen/"
    include "${data}/names/bloodnames/"
    include "${data}/images/awards/"
    include "${data}/images/force/"
    include "${data}/images/portraits/"
    include "${data}/images/fluff/Mech/*.png"
    include "${data}/images/misc/"
    include "${data}/images/stratcon/"
    include "${data}/images/universe/"
    include "${data}/images/storysplash/"
    include "${data}/scenariomodifiers/"
    include "${data}/scenariotemplates/"
    include "${data}/stratconbiomedefinitions/"
    include "${data}/stratconcontractdefinitions/"
    include "${data}/stratconfacilities/"
    include "${data}/storyarcs/"
    include "${data}/terrainconditionsodds/"
    include "${docs}/**"
    include "${mmconf}/**"
    include "${project.ext.plugins}/"
    include "${userdata}"
    include "${userdata}/data/universe/"
    include 'license.txt'
    include 'SubmitBug.html'
    include "sentry.properties"
    include "*.ini"

    into fileStagingDir

    doLast {
        mkdir "${fileStagingDir}/${log}"
        mkdir "${fileStagingDir}/${userdata}/${mmconf}/campaignPresets/"
    }
}

task createStartScripts (type: CreateStartScripts) {
    description = 'Create shell script for generic distribution.'

    applicationName = 'MekHQ'
    mainClass = application.mainClass
    outputDir = startScripts.outputDir
    classpath = jar.outputs.files + files(project.sourceSets.main.runtimeClasspath.files)
            .filter { it.name.endsWith(".jar") }
    defaultJvmOpts = project.ext.mhqJvmOptions
}

distributions {
    main {
        distributionBaseName = 'MekHQ'
        contents {
            // MegaMek Includes
            from ("${mmDir}/megamek/build/files")
            from ("${mmDir}/megamek/build/scripts") {
                into "bin"
            }
            from ("${mmDir}/megamek/scripts") {
                include "shell.sh"
                rename "shell.sh", "MegaMek.sh"
            }
            from ("${mmDir}/megamek/docs") {
                rename 'history.txt', 'mm-history.txt'
                into 'docs'
            }
            from ("${mmDir}/megamek/mmconf/log4j2.xml") {
                exclude 'log4j2.xml'
            }
            from ("${mmDir}/megamek/build/launch4j/lib") {
                into "${lib}"
            }
            from ("${mmDir}/megamek/build/launch4j") {
                include '*.exe'
            }
            from ("${mmDir}/megamek/build/libs/MegaMek.jar") {
                into "${lib}"
            }
            from ("${mmDir}/megamek/build/libs/MegaMek.jar")
            from ("${mmDir}/megamek/") {
                include '*.ini'
            }

            // MegaMekLab Includes
            from ("${mmlDir}/megameklab/build/files") {
                exclude 'data/mechfiles'
            }
            from ("${mmlDir}/megameklab/build/launch4j/lib") {
                into "${lib}"
            }
            from ("${mmlDir}/megameklab/build/files/${data}/images") {
                into "${data}/images"
            }
            from ("${mmlDir}/megameklab/build/scripts") {
                into "bin"
            }
            from ("${mmlDir}/megameklab/scripts") {
                include "shell.sh"
                rename "shell.sh", "MegaMekLab.sh"
            }
            from ("${mmlDir}/megameklab/docs") {
                rename 'history.txt', 'mml-history.txt'
                into "${docs}"
            }
            from ("${mmlDir}/megameklab/mmconf/log4j2.xml") {
                exclude 'log4j2.xml'
            }
            from ("${mmlDir}/megameklab/build/launch4j") {
                include '*.exe'
            }
            from ("${mmlDir}/megameklab/build/libs/MegaMekLab.jar") {
                into "${lib}"
            }
            from ("${mmlDir}/megameklab/build/libs/MegaMekLab.jar")
            from ("${mmlDir}/megameklab/") {
                include '*.ini'
            }

            // MekHQ Includes
            from ("docs/history.txt") {
                rename 'history.txt', 'mhq-history.txt'
                into 'docs'
            }
            from (fileStagingDir) {
                exclude 'history.txt'
            }
            from ("${projectDir}/scripts") {
                include 'shell.sh'
                rename 'shell.sh', 'MekHQ.sh'
            }
            from ("${buildDir}/launch4j") {
                include '*.exe'
            }

            from (project.sourceSets.main.runtimeClasspath.files
                    .findAll { it.name.endsWith(".jar") && !it.name.toLowerCase().startsWith("megamek") }) {
                into "${lib}"
            }
            from(jar) {
                into "${lib}"
            }
            from(jar)

            duplicatesStrategy = 'exclude'
        }
    }
}

launch4j {
    description = 'Create Windows executable for MekHQ'
    mainClassName = application.mainClass
    icon = "${projectDir}/data/images/misc/mekhq.ico"
    outfile = "MekHQ.exe"
    jarTask = project.tasks.jar
    windowTitle = 'MekHQ'
    internalName = 'MekHQ'
    downloadUrl = 'https://github.com/MegaMek/megamek/wiki/Updating-to-Adoptium-(Eclipse-Temurin-Open-Source-Java)'
    supportUrl = 'https://megamek.org'
    copyright = '2024 MegaMek Development Team.'
    trademarks = 'MechWarrior, BattleMech, `Mech and Aerotech - The The Topps Company, Inc. Catalyst Game Labs - InMediaRes Productions, LLC.'
    companyName = "MegaMek Development Team"
    jreMinVersion = '17'
    dontWrapJar = true
    messagesJreVersionError = 'We require a Java Runtime of version 17 or higher installed. https://github.com/MegaMek/megamek/wiki/Updating-to-Adoptium-(Eclipse-Temurin-Open-Source-Java)'
    messagesJreNotFoundError = 'Go here for instructions on installing the correct version of Java: https://github.com/MegaMek/megamek/wiki/Updating-to-Adoptium-(Eclipse-Temurin-Open-Source-Java)'
}

tasks.register("packagePrepWork") {
    description = 'General Catch All for all distributions'
    dependsOn stageFiles
    dependsOn startScripts
    dependsOn createStartScripts
    dependsOn createAllExecutables
    dependsOn gradle.includedBuild('megamek').task(':megamek:stageFiles')
    dependsOn gradle.includedBuild('megameklab').task(':megameklab:stageFiles')
    dependsOn gradle.includedBuild('megamek').task(':megamek:startScripts')
    dependsOn gradle.includedBuild('megameklab').task(':megameklab:startScripts')
    dependsOn gradle.includedBuild('megamek').task(':megamek:createStartScripts')
    dependsOn gradle.includedBuild('megameklab').task(':megameklab:createStartScripts')
    dependsOn gradle.includedBuild('megamek').task(':megamek:createAllExecutables')
    dependsOn gradle.includedBuild('megameklab').task(':megameklab:createAllExecutables')
}

distTar {
    description = 'Creates *nix distribution packaged as a tar ball'
    duplicatesStrategy = 'exclude'
    dependsOn packagePrepWork
    archiveExtension = 'tar.gz'
    compression = Compression.GZIP
}

distZip {
    description = 'Creates *nix distribution packaged as a tar ball'
    enabled = false
    dependsOn packagePrepWork
}

// The distribution plugin adds the distro packages to the assemble task, which causes the build task
// to run all the packaging tasks.
task assemble(overwrite: true) {
    dependsOn jar
}

// Replace the assembleDist task created by the distributions plugin to create the packages we want to
task assembleDist(overwrite: true) {
    description = 'Build unix, Windows, and source packages'
    group = 'distribution'
    dependsOn stageFiles
    dependsOn test
    dependsOn distTar
}

tasks.register("buildAllPackages", Copy) {
    dependsOn gradle.includedBuild('megamek').task(':megamek:assembleDist')
    dependsOn gradle.includedBuild('megameklab').task(':megameklab:assembleDist')
    dependsOn assembleDist
    group = "distribution"

    into layout.buildDirectory.dir("distributions")
    from("${mmDir}/megamek/build/distributions") {
        include "*.tar.gz"
    }
    from("${mmlDir}/megameklab/build/distributions") {
        include "*.tar.gz"
    }
}

tasks.register("cleanAll") {
    description = "Cleans all build projects to ensure a clean salte"
    group = "build"
    dependsOn gradle.includedBuild('megamek').task(':megamek:clean')
    dependsOn gradle.includedBuild('megameklab').task(':megameklab:clean')
    dependsOn clean
}

test {
    useJUnitPlatform()
    // report is always generated after tests run
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    // tests are required to run before generating the report
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}
